<resources>
    <string name="app_name">Test</string>
    <string name="title_activity_main">Companies list</string>
    <string name="volver_a_intentar">Try again</string>
    <string name="cannot">Could not connect to internet</string>
    <string name="error_download">An error while loading companies</string>
    <string name="title_activity_detail">Detail</string>

    <string name="action_settings">Settings</string>
    <string name="id_company">id:</string>
    <string name="address_">Address:</string>
    <string name="date_">Date:</string>
    <string name="see_on_map">see on map</string>
    <string name="save">save</string>
    <string name="title_activity_email">Send E-mail</string>

    <string name="to_">To:</string>
    <string name="subject_">Subject</string>
    <string name="body_">Body</string>
    <string name="send_email">Send E-mail</string>
    <string name="you_need">you need to write the message body</string>
    <string name="add_fav">Add to Fav</string>
    <string name="delete_fav">Delete favorite</string>
    <string name="added_success">Added successfully</string>
    <string name="delete_success">Deleted successfully</string>
</resources>
