<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_light"
    tools:context="com.omitsis.test.DetailActivity">
    
    <RelativeLayout
        android:id="@+id/rel_img"
        android:layout_width="150dp"
        android:layout_height="200dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:background="@android:color/darker_gray">

        <ProgressBar
            android:id="@+id/pg_bar_img"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


        <com.android.volley.toolbox.NetworkImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/img_company" />

    </RelativeLayout>


    <TextView
        android:id="@+id/lbl_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="name"
        android:layout_toRightOf="@id/rel_img"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="10dp"
        android:textSize="30dp"
        android:textColor="@android:color/black"/>

    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/id_company"
        android:layout_toRightOf="@id/rel_img"
        android:layout_below="@id/lbl_name"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="10dp"
        android:textSize="15dp"
        android:textColor="@android:color/black"/>

    <TextView
        android:id="@+id/lbl_id_company"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/id_company"
        android:layout_toRightOf="@id/text1"
        android:layout_below="@id/lbl_name"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="10dp"
        android:textSize="15dp"
        android:textColor="@android:color/black"/>


    <TextView
        android:id="@+id/text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address_"
        android:layout_below="@id/rel_img"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="10dp"
        android:textSize="15dp"
        android:textColor="@android:color/black"/>

    <TextView
        android:id="@+id/lbl_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="address"
        android:layout_toRightOf="@id/text2"
        android:layout_below="@id/rel_img"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="10dp"
        android:textSize="15dp"
        android:textColor="@android:color/black"/>


    <TextView
        android:id="@+id/text3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_"
        android:layout_below="@id/text2"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="10dp"
        android:textSize="15dp"
        android:textColor="@android:color/black"/>

    <TextView
        android:id="@+id/lbl_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Date"
        android:layout_toRightOf="@id/text3"
        android:layout_below="@id/text2"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="10dp"
        android:textSize="15dp"
        android:textColor="@android:color/black"/>

    <Button
        android:id="@+id/btn_map"
        android:text="@string/see_on_map"
        android:layout_below="@id/lbl_date"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


    

</RelativeLayout>
